<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.Register">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/registrar"
            android:layout_width="27dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/img_2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp"
            android:text="@string/resgistrateparacomenzar"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/correoreg"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="text"
            android:textColorHint="#8391A1" />

        <EditText
            android:id="@+id/passreg"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textColorHint="#8391A1" />

        <EditText
            android:id="@+id/nombrereg"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/nombres"
            android:inputType="text" />

        <EditText
            android:id="@+id/telreg"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/numcel"
            android:inputType="text" />

        <Button
            android:id="@+id/regiss"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:backgroundTint="#1E232C"
            android:text="@string/register"
            app:cornerRadius="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yatienescuenta"
                android:textAlignment="textEnd" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/iniciahora"
                android:textAlignment="textStart"
                android:textColor="@color/design_default_color_secondary" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>