<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.Update">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/update"
            android:layout_width="27dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/img_2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp"
            android:text="@string/hola2"
            android:textSize="30dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/correoupdate"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="text" />

        <EditText
            android:id="@+id/passupdate"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="text" />

        <EditText
            android:id="@+id/nombresupdate"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/nombres"
            android:inputType="text" />

        <EditText
            android:id="@+id/numcelupdate"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/numcel"
            android:inputType="text" />

        <Button
            android:id="@+id/registerupdate"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:backgroundTint=" #1E232C"
            android:text="@string/register"
            app:cornerRadius="8dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>