<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.Login">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/log"
            android:layout_width="29dp"
            android:layout_height="37dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/img_2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="60dp"
            android:text="@string/bienenido"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/correolog"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="text"
            android:textColorHint=" #8391A1" />

        <EditText
            android:id="@+id/passlog"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/contraseña"
            android:inputType="text"
            android:textColorHint=" #8391A1" />

        <Button
            android:id="@+id/olvidopass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/design_default_color_background"
            android:text="@string/olvide_mi_contraseña"
            android:textAlignment="textEnd"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/inisiarlog"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:backgroundTint=" #1E232C"
            android:text="@string/inicio_sesion"
            app:cornerRadius="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="25dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notienescuenta"
                android:textAlignment="textEnd" />

            <Button
                android:id="@+id/restrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/design_default_color_background"
                android:text="@string/resgistrateahora"
                android:textAlignment="textStart"
                android:textColor=" #35C2C1"
                app:cornerRadius="0dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>