<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.Forgotpass">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/forgotpss"
            android:layout_width="27dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/img_2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:text="@string/olvidocontra"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/notepreocupes"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/correofp"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/correo" />

        <Button
            android:id="@+id/enviar_codigo"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:backgroundTint=" #1E232C"
            android:text="@string/enviarcodigo"
            app:cornerRadius="8dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>